bugfix z-index modal

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -41,7 +41,7 @@
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 1;
+  z-index: 3;
   /* Sit on top */
   left: 0;
   top: 0;
